style.css
:root {
  --color-accent: #d9468f;
}

html {
  color-scheme: light dark;
  accent-color: var(--color-accent);
}

body {
  /* Set line height to 1.5 times the font size and use the OS UI font. */
  font: 100%/1.5 system-ui;
  max-width: 100ch;
  margin-left: auto;
  margin-right: auto;
  margin-inline: auto;
  padding-left: 1em;
  padding-right: 1em;
  padding-inline: 1em;
}

nav ul,
nav li {
  display: contents;
}

nav {
  --border-color: oklch(50% 10% 200 / 40%);
  display: flex;
  margin-bottom: 1.5rem;
  border-bottom: 1px solid var(--border-color);
}

nav a {
  flex: 1;
  text-decoration: none;
  color: inherit;
  text-align: center;
  padding: 0.5em;
}

nav a.current {
  border-bottom: 0.4em solid var(--border-color);
  padding-bottom: 0.1em;
}

nav a:hover {
  border-bottom: 0.4em solid var(--color-accent);
  background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
  padding-bottom: 0.1em;
}

.color-scheme {
  width: 100%;
  font-size: 80%;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 0.5em;
  margin-top: 0.5rem;
}

input,
textarea,
button,
select {
  font: inherit;
}

form {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 1em;
}

form label {
  display: grid;
  grid-template-columns: subgrid;
  grid-column: 1 / -1;
}

form input,
form textarea,
form button {
  width: 100%;
  box-sizing: border-box;
}

form button {
  grid-column: 1 / -1;
}

.projects {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
  gap: 1em;
}

.projects > article {
  display: grid;
  grid-template-rows: subgrid;
  grid-row: span 3;
  gap: 1em;
}

.projects > article h2 {
  margin: 0;
}

.projects > article img {
  width: 100%;
  height: auto;
}

h1 {
  font-size: 400%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  line-height: 1.1;
  text-wrap: balance;
}

